tests/samples/negative/expressions/block_expression_scope.ax
module block_expression_scope;

fn main() -> i32 {
    let value = {
        let inner = 1;
        inner
    };
    return inner + value;
}
